fix: light mode midground now meets WCAGAA standard of 4.5 contrast ratio

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -20,6 +20,7 @@
 
   & > #search-icon {
     border: 1px solid var(--midground-fainter);
+    border-radius: 5px;
     height: 1.6rem;
     display: flex;
     align-items: center;
